[gd_scene load_steps=7 format=2]

[ext_resource path="res://final_scene.gd" type="Script" id=1]
[ext_resource path="res://sprites/game_completed.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Magic_Dreams.ttf"

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 60
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Magic_Dreams.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[node name="final_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="h_box" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="v_box" type="VBoxContainer" parent="h_box"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="score" type="Label" parent="h_box/v_box"]
margin_top = 598.0
margin_right = 1280.0
margin_bottom = 665.0
custom_fonts/font = SubResource( 2 )
text = "12301"
align = 1
valign = 1

[node name="h_box_inline" type="HBoxContainer" parent="h_box/v_box"]
margin_top = 669.0
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1

[node name="start" type="Button" parent="h_box/v_box/h_box_inline"]
margin_left = 407.0
margin_right = 585.0
margin_bottom = 51.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 4 )
text = "Play Again"

[node name="Control" type="Control" parent="h_box/v_box/h_box_inline"]
margin_left = 589.0
margin_right = 689.0
margin_bottom = 51.0
rect_min_size = Vector2( 100, 0 )

[node name="menu" type="Button" parent="h_box/v_box/h_box_inline"]
margin_left = 693.0
margin_right = 873.0
margin_bottom = 51.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
